# onecode

./: .gitignore  LICENSE  README.md  codecov.yml  mkdocs.yml  pyproject.toml  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  change_request.md  change_request.yml  question.md  question.yml
.github/workflows/: changelog_check.yml  documentation_builder.yml  validation.yml
0.1.0/: 404.html  objects.inv
0.1.0/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.0/changelogs/0.1.0/: index.html
0.2.0/changelogs/0.2.0/: index.html
0.2.0/search/: search_index.json
0.2.1/: 404.html  index.html  sitemap.xml
0.2.1/changelogs/0.1.0/: index.html
0.2.1/changelogs/0.2.0/: index.html
0.2.1/changelogs/0.2.1/: index.html
0.2.1/extending_onecode/: index.html
0.2.1/search/: search_index.json
0.2.1/tips_and_tricks/: index.html
0.3.0/: index.html  sitemap.xml
0.3.0/changelogs/0.2.0/: index.html
0.3.0/changelogs/0.2.1/: index.html
0.3.0/changelogs/0.3.0/: index.html
0.4.0/: 404.html  objects.inv
0.4.0/changelogs/0.1.0/: index.html
0.4.0/changelogs/0.2.0/: index.html
0.4.0/changelogs/0.2.1/: index.html
0.4.0/changelogs/0.3.0/: index.html
0.4.0/extending_onecode/: index.html
0.4.0/stylesheets/: extra.css
0.4.0/tips_and_tricks/: index.html
1.0.0/changelogs/0.1.0/: index.html
1.0.0/changelogs/0.2.1/: index.html
1.0.0/faq/: index.html
1.0.0/organizing_data/: index.html
1.0.0/search/: search_index.json
1.0.0/stylesheets/: extra.css
1.0.0/user_doc/: index.html
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/changelogs/0.1.0/: index.html
dev/changelogs/0.2.0/: index.html
dev/changelogs/0.2.1/: index.html
dev/changelogs/0.3.0/: index.html
dev/changelogs/0.4.0/: index.html
dev/changelogs/0.5.0/: index.html
dev/changelogs/1.0.0/: index.html
dev/extending_onecode/: index.html
dev/faq/: index.html
dev/organizing_data/: index.html
dev/search/: search_index.json
dev/stylesheets/: extra.css
dev/tips_and_tricks/: index.html
dev/user_doc/: index.html
docs/: extending_onecode.md  faq.md  index.md  organizing_data.md  tips_and_tricks.md  user_doc.md
docs/changelogs/: 0.1.0.md  0.2.0.md  0.2.1.md  0.3.0.md  0.4.0.md  0.5.0.md  1.0.0.md
docs/reference/base/: enums.md  logger.md  project.md
docs/reference/cli/: add.md  cli.md  create.md  extract.md  start.md  utils.md
docs/reference/elements/: element_list.md  input_element.md  input_element_list.md  input_elements_api.md  output_element.md  output_element_list.md  output_elements_api.md
docs/reference/utils/: utils.md
examples/CSV2JSON_Converter/: .onecode.json  README.md  params.json  requirements.txt
examples/CSV2JSON_Converter/data/: test.csv
examples/CSV2JSON_Converter/flows/: csv2json.py
examples/DeepLearning/: .onecode.json  README.md  main.py  params.json  requirements.txt
examples/DeepLearning/flows/: predict.py  train.py
examples/ExperimentalVariography/: .gitignore  .onecode.json  README.md  params.json
examples/ExperimentalVariography/flows/: experimentalvariography.py
examples/HelloWorld/: .onecode.json  README.md  params.json
examples/HelloWorld/data/: README.md
examples/HelloWorld/flows/: hello_world.py
examples/LASConverter/: .onecode.json  README.md  main.py  requirements.txt
examples/LASConverter/data/: README.md
examples/LASConverter/flows/: las_convert.py
examples/PyVistaViz/: .onecode.json  README.md  requirements.txt
examples/PyVistaViz/data/: README.md
examples/PyVistaViz/flows/: pyvistaviz.py
examples/yourcode/: README.md  pyproject.toml
examples/yourcode/example/MyFlow/: .onecode.json  params.json  params.toml
examples/yourcode/example/MyFlow/flows/: myflow.py
examples/yourcode/yourcode/: __init__.py
examples/yourcode/yourcode/cli/: extract.py
examples/yourcode/yourcode/elements/: __init__.py  dynamic_radio_button.py
latest/changelogs/0.1.0/: index.html
latest/changelogs/0.2.0/: index.html
latest/changelogs/0.2.1/: index.html
latest/changelogs/0.3.0/: index.html
latest/changelogs/0.4.0/: index.html
latest/changelogs/1.0.0/: index.html
latest/extending_onecode/: index.html
latest/organizing_data/: index.html
latest/tips_and_tricks/: index.html
latest/user_doc/: index.html
onecode/: __init__.py
onecode/base/: __init__.py  decorator.py  enums.py  logger.py  project.py  singleton.py
onecode/cli/: __init__.py  add.py  build.py  create.py  extract.py  start.py  utils.py  zip.py
onecode/cli/skeleton/: .gitignore  README.md  main.py  requirements.txt
onecode/elements/: __init__.py  input_element.py  output_element.py
onecode/elements/input/: __init__.py  checkbox.py  csv_reader.py  dropdown.py  file_input.py  folder_input.py  number_input.py  radio_button.py  section_header.py  slider.py  text_input.py
onecode/elements/output/: __init__.py  csv_output.py  file_output.py  html_output.py  image_output.py  plotly_output.py  pyvista_vrml_output.py  text_output.py  video_output.py
onecode/utils/: __init__.py  format.py  import_input.py  import_output.py  module.py  typing.py
tests/: conftest.py
tests/data/flow_1/: .onecode.json  app.py  ground_truth.json  ground_truth_all.json  ground_truth_app_ui_order1.json  ground_truth_app_ui_order2.json  main.py
tests/data/invalid_element/: .onecode.json  main.py
tests/data/invalid_flow/: main.py
tests/emulations/base/: test_run_project.py
tests/emulations/cli/: test_execution.py
tests/emulations/dev/: no_test_run_extend_output_element.py  test_run_extend_input_element.py  test_run_extend_output_element.py
tests/emulations/elements/: test_run_checkbox.py  test_run_csv_output.py  test_run_csv_reader.py  test_run_dropdown.py  test_run_file_input.py  test_run_file_output.py  test_run_folder_input.py  test_run_html_output.py  test_run_image_output.py  test_run_number_input.py  test_run_plotly_output.py  test_run_pyvista_vrml_output.py  test_run_radio_button.py  test_run_section_header.py  test_run_slider.py  (+3 more)
tests/utils/: flow_cli.py  format.py
(+259 files in other folders)
