[tool.poetry]
name = "yourcode"
version = "0.1.0"
description = "OneCode extension library example"
authors = ["DeepLime <contact@deeplime.io>"]
license = "MIT"
keywords = ["OneCode", "flow"]
homepage = "https://github.com/deeplime-io/onecode"
repository = "https://github.com/deeplime-io/onecode/example/yourcode"
documentation = "https://github.com/deeplime-io/onecode"
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Code Generators"
]

[tool.poetry.dependencies]
python = ">=3.7, <4"

[tool.poetry.dev-dependencies]
pytest = "^6.0.2"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
yourcode-extract = 'yourcode.cli.extract:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
